styles.css
*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: #040224;
    background-size: cover;
    font-family: 'Roboto', 'Open Sans', sans-serif;
    text-align: center;
    position: relative;
}

.container {
    margin: 150px auto;
    border: 2px solid #0b037cbe;
    border-radius: 50px;
    box-shadow: 0 0 10px 10px #050141be;;
    width: 50%;
    height: auto;
    background-color: #050141be;
    color: whitesmoke;
}

h1 {
    font-size: 1.5rem;
    padding-top: 30px;
    padding-bottom: 30px;
}

#count-el {
    font-size: 4rem;
    font-weight: bold;
    margin-top: 20px;
    margin-bottom: 20px;
}

button {
    border: 1px solid;
    padding-top: 10px;
    padding-bottom: 10px;
    color: white;
    font-weight: bold;
    width: 130px;
    margin-bottom: 30px;
    border-radius: 5px;
}

#decrement-btn, #increment-btn {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    font-size: 1.5rem;
    font-weight: 900;
    text-align: center;
    margin: 0 5px 1.5rem;
}

#decrement-btn {
    background-color: rgb(230, 10, 20);
    border: 1px solid rgb(231, 44, 44);
}

#increment-btn {
    background: rgb(53, 231, 53);
    border: 1px solid rgb(53, 231, 53);
}

#save-btn, #reset-btn {
    margin: 0 5px 30px;
}

#save-btn {
    background: #1C7947;
    font-weight: bold;
}

#reset-btn {
    background: rgb(45, 25, 231);
    font-weight: bold;
}

#save-el {
    margin-bottom: 20px;
}

@media (max-width: 820px) {
    .container {
        margin-top: 300px;
        width: 80%;
    }

    #save-btn, #reset-btn {
        width: 30%;
        margin: 20px 5px 50px;
    }

    #save-el {
        margin-bottom: 50px;
    }
}

@media (max-width: 490px) {
    .container {
        margin-top: 200px;
    }
}

